--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     </head>
     <body>
         <p>fugeietgidgegy</p>
-    <iframe id="inlineFrameExample"
-        title="Inline Frame Example"
-        width="300"
-        height="200"
-        src="https://dev-goyard-gift.cs108.force.com/FormVF">
-    </iframe>
+        <p>fugeietgidgegy</p><p>fugeietgidgegy</p>
+        <p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p>
+
     </body>
 </html>
