--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p>
          <iframe id="inlineFrameExample"
         title="Inline Frame Example"
-        width="300"
-        height="200"
+        width=">800"
+        height="600"
         src="https://dev-goyard-gift.cs108.force.com/FormVF">
     </iframe>
     </body>
