--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
         <title>WEB TO LEAD</title>
     </head>
     <body>
-        <p>fugeietgidgegy</p>
-        <p>fugeierfefeftgidgegy</p><p>fugeietgidgegy</p>
-        <p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p><p>fugeietgidgegy</p>
+        <H4>Register your gift</h4>
          <iframe id="inlineFrameExample"
         title="Inline Frame Example"
         width=">800"
