--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>WEB TO LEAD</title>
+        <link rel= "stylesheet" href= "style.css">
     </head>
     <body>
         <H4>Register your gift</h4>
