--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <H4>Register your gift</h4>
-         <iframe id="inlineFrameExample"
+         <iframe class ="exemple" id="inlineFrameExample"
         title="Inline Frame Example"
         width=">800"
         height="600"
