--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel= "stylesheet" href= "style.css">
     </head>
     <body>
-        <H4>Register your gift</h4>
+        <H4  class ="exemple">Register your gift</h4>
          <iframe class ="exemple" id="inlineFrameExample"
         title="Inline Frame Example"
         width=">800"
