--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <H4  class ="exemple">Register your gift</h4>
          <iframe class ="exemple" id="inlineFrameExample"
         title="Inline Frame Example"
-        width="800"
-        height="600"
+        width="800px"
+        height="600px"
         src="https://dev-goyard-gift.cs108.force.com/FormVF">
     </iframe>
     </body>
