--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     </head>
     <body>
         <H4  class ="title">Register your gift </h4>
-         <iframe class ="exemple" id="inlineFrameExample"
-        title="Inline Frame Example"
-        src="https://dev-goyard-gift.cs108.force.com/FormVF">
-    </iframe>
+        <iframe id="inlineFrameExample" title="Inline Frame Example" src="https://dev-goyard-gift.cs108.force.com/FormVF"></iframe>
     </body>
 </html>
