--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <H4  class ="title">Register your gift </h4>
-        <iframe id="inlineFrameExample" title="Inline Frame Example" src="https://dev-goyard-gift.cs108.force.com/FormVF"></iframe>
+        <iframe id="inlineFrameExample" title="Inline Frame Example" src="https://dev-goyard-gift.cs108.force.com/FormVF"  frameBorder="0" scrolling="no" ></iframe>
     </body>
 </html>
