--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <H4  class ="title">Register your gift </h4>
-        <iframe id="inlineFrameExample" title="Inline Frame Example" src="https://dev-goyard-gift.cs108.force.com/FormVF"  frameBorder="0" scrolling="no" ></iframe>
+         <iframe class ="exemple" id="inlineFrameExample"  title="Inline Frame Example" width="800px"  width="700px"   height="600px" src="https://dev-goyard-gift.cs108.force.com/FormVF">
+    </iframe>
     </body>
 </html>
