--- a/succes.html
+++ b/succes.html
@@ -1,1 +1,10 @@
 
+<!DOCTYPE html>
+    <head>
+        <title>WEB TO LEAD</title>
+        <link rel="stylesheet" href= "style.css">
+    </head>
+    <body>
+        <H4  class ="title">Thank your for the registration </h4>
+    </body>
+</html>
