--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <H4  class ="title">Register your gift </h4>
-         <iframe class ="exemple" id="inlineFrameExample"  title="Inline Frame Example" width="800px"  height="700px" src="https://dev-goyard-gift.cs108.force.com/FormVF">
+         <iframe class ="exemple" id="inlineFrameExample"  title="Inline Frame Example" width="800px"  height="700px" src="https://staging-goyard-gift.cs101.force.com/">
     </iframe>
     </body>
 </html>
