--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href= "style.css">
     </head>
     <body>
-<H4  class ="title">Register your gift </h4><iframe class ="exemple" id="inlineFrameExample"  title="Inline Frame Example" width="800px"  height="700px" src="http://staging-goyard-gift.cs101.force.com/GiftManagementVFPage
-">
+<H4  class ="title">Register your gift </h4>
+      <iframe class ="exemple" id="inlineFrameExample" title="Inline Frame Example" width="800px" height="700px" src="http://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
     </iframe>
     </body>
 </html>
