--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href= "style.css">
     </head>
     <body>
-<H4  class ="title">Register your gift </h4>
+<H4  class ="title">Register your gift v1 </h4>
       <iframe width="700px" height="650px" src="https://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
     </iframe>
     </body>
