--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
 <H4  class ="title">Register your gift v1 </h4>
-      <iframe width="700px" height="650px" src="https://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
+      <iframe width="700px" height="650px" frameBorder="0" src="https://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
     </iframe>
     </body>
 </html>
