--- a/index.html
+++ b/index.html
@@ -9,3 +9,31 @@
     </iframe>
     </body>
 </html>
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Disable Iframe Border</title>
+        <style>
+            iframe {
+                height:200px;
+                width:400px;
+                background-color:lightgreen;
+            }
+            h1 {
+                color:green;
+            }
+            body {
+                text-align:center;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>GeeksforGeeks</h1>
+        <h2>iframe border property</h2>
+  
+        <iframe frameBorder="0" src="https://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
+        
+    </body>
+</html>                    
