--- a/index.html
+++ b/index.html
@@ -1,29 +1,12 @@
 
-
-
 <!DOCTYPE html>
-<html>
     <head>
-        <title>Disable Iframe Border</title>
-        <style>
-            iframe {
-                height:200px;
-                width:400px;
-                background-color:lightgreen;
-            }
-            h1 {
-                color:green;
-            }
-            body {
-                text-align:center;
-            }
-        </style>
+        <title>WEB TO LEAD</title>
+        <link rel="stylesheet" href= "style.css">
     </head>
     <body>
-        <h1>GeeksforGeeks</h1>
-        <h2>iframe border property</h2>
-  
-        <iframe frameBorder="0" src="https://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
-        
+<H4  class ="title">Register your gift v1 </h4>
+      <iframe width="700px" height="650px" frameBorder="0" src="https://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
+    </iframe>
     </body>
-</html>                    
+</html>
