--- a/succes.html
+++ b/succes.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href= "style.css">
     </head>
     <body>
-        <H4  class ="title">Thank you for the registration </h4>
+        <H4  class ="title">Thank you for registering</h4>
     </body>
 </html>
