--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 <H4  class ="title">Register your gift v5 </h4>
-      <iframe width="1000px" height="850px" frameBorder="0" src="https://staging-goyard-gift.cs101.force.com/GiftManagementVFPage">
+      <iframe width="1000px" height="850px" frameBorder="0" src="https://goyard-gift.secure.force.com/GiftManagementVFPage/">
     </iframe>
         <p>Testing jsdzipdizjdpiz</p>
     </body>
